rootskel (1.64) UNRELEASED; urgency=low

  [ Samuel Thibault ]
  * Add basic support for speakup (voice synthesis for accessibility).

 -- Frans Pop <fjp@debian.org>  Mon, 14 Jul 2008 19:47:24 +0200

rootskel (1.63) unstable; urgency=low

  [ Joey Hess ]
  * Rename toplevel /floppy mountpoint to /media, as used by the newly
    renamed mountmedia.

  [ Frans Pop ]
  * Apply patch from Samuel Thibault to also expose the theme to the text
    frontend. Closes: #488493.

 -- Joey Hess <joeyh@debian.org>  Mon, 07 Jul 2008 14:03:14 -0400

rootskel (1.62) unstable; urgency=low

  [ Frans Pop ]
  * Remove Bdale Garbee, Kenshi Muto and Matt Kraai as Uploaders with many
    thanks for their past contributions.

  [ Joey Hess ]
  * Fix FTBFS on alpha.

 -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 21:02:30 -0400

rootskel (1.61) unstable; urgency=low

  [ Frans Pop ]
  * S35term: script is sourced, so remove the shebang.
  * S35framebuffer-linux: export TERM_FRAMEBUFFER so that can be used to test
    whether framebuffer is available or not (e.g. in localechooser).

  [ Joey Hess ]
  * Translated bootfloppy init to a C program, this allows dropping
    the shell from the boot floppy to save space.

 -- Frans Pop <fjp@debian.org>  Fri, 04 Apr 2008 21:04:34 +0200

rootskel (1.60) unstable; urgency=low

  [ Frans Pop ]
  * S40framebuffer-module-linux-alpha: remove redundant architecture test.
  * S40framebuffer-module-linux-x86: allow for the fact that vesafb and fbcon
    can be (and are) compiled in for i386 and amd64 kernels.

  [ Joey Hess ]
  * Fix debugshell on boot floppy, there is no sh command, have to use the
    klibc sh.
  * Rewrite boot floppy init to try to load a cpio archive direct from the
    floppy with no encapsulating filesystem. This will save space by 
    allowing modularising ext2 in the kernel.
  * There's no sleep command on the boot floppy, don't try to use it.

 -- Joey Hess <joeyh@debian.org>  Mon, 31 Mar 2008 18:33:51 -0400
